--- a/source/style/_defaut.sass
+++ b/source/style/_defaut.sass
@@ -1,2 +1,36 @@
+html, body
+	font-family: 'Karla', sans-serif
+	font-size: 14px
+	
+
 #page-loader
 	display: none
+	
+#page-content
+	padding: 0
+	margin: 0
+	width: 100%
+	position: relative
+
+/** top column header
+#logo
+	#default-logo
+		img
+			width: 150px
+			height: auto
+	
+#top-menu
+	display: flex
+	align-items: center
+	justify-content: flex-end
+	ul.nav-group
+		display: flex
+		flex-direction: row
+		align-items: center
+		margin: 0
+		padding: 0
+		li.nav-item
+			padding: 0
+			margin: 0 0 0 32px
+			text-transform: uppercase
+	
