--- a/source/style/_defaut.sass
+++ b/source/style/_defaut.sass
@@ -2,6 +2,17 @@ html, body
 	font-family: 'Karla', sans-serif
 	font-size: 14px
 	
+a
+	color: black
+	text-decoration: none
+
+ul //????????
+	padding: 0
+	margin: 0
+
+li
+	list-style: none
+	
 
 #page-loader
 	display: none
@@ -11,26 +22,4 @@ html, body
 	margin: 0
 	width: 100%
 	position: relative
-
-/** top column header
-#logo
-	#default-logo
-		img
-			width: 150px
-			height: auto
-	
-#top-menu
-	display: flex
-	align-items: center
-	justify-content: flex-end
-	ul.nav-group
-		display: flex
-		flex-direction: row
-		align-items: center
-		margin: 0
-		padding: 0
-		li.nav-item
-			padding: 0
-			margin: 0 0 0 32px
-			text-transform: uppercase
 	
