--- a/source/style/header.sass
+++ b/source/style/header.sass
@@ -23,7 +23,9 @@ header.active
 	display: flex
 	align-items: center
 	justify-content: flex-end
-	ul.nav-group
+	button.nav-menu-button
+		display: none
+	ul.nav-menu-group
 		display: flex
 		flex-direction: row
 		align-items: center
