--- a/source/style/header.sass
+++ b/source/style/header.sass
@@ -36,3 +36,10 @@ header.active
 			margin: 0 0 0 32px
 			text-transform: uppercase
 			font-weight: 600
+
+
+#full-background
+	background: url("https://cdn.pixabay.com/photo/2018/02/27/09/19/colors-3185020_1280.jpg") no-repeat top center
+	background-size: cover
+	width: 100%
+	min-height: 100%
