--- a/source/style/_header.sass
+++ b/source/style/_header.sass
@@ -38,13 +38,20 @@ header.active
 			text-transform: uppercase
 			font-weight: 600
 
-
+/** Scroll full background
 #full-background
 	width: 100%
 	height: 100%
-	//overflow: hidden
-	.full-background-item
-		background: url("https://cdn.pixabay.com/photo/2018/02/27/09/19/colors-3185020_1280.jpg") no-repeat top center
-		background-size: cover
-		width: 100%
+	overflow: hidden
+	position: relative
+	.full-background-inner
+		display: flex
+		//transition: all 1s cubic-bezier(1, 0.56, 0.34, 1.07)
+		width: auto
 		height: 100%
+		.full-background-item
+			position: relative
+			background: url("https://cdn.pixabay.com/photo/2018/02/27/09/19/colors-3185020_1280.jpg") no-repeat top center
+			background-size: cover
+			min-width: 100%
+			height: 100%
